# guile-simple-zmq

./: .gitignore  Makefile.am  README.md  README.org  configure.ac  guile jupyter kernel zeromq client example.ipynb  guile jupyter kernel zeromq server example.ipynb  simple-zmq.scm.in
src/: simple-zmq.scm
tests/: base.scm
